--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
+    "homepage": "https://PavelKull.github.io/Popup-UTK",
     "name": "test-popup",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
     "scripts": {
         "start": "cross-env NODE_ENV=development webpack serve --config config/webpack.config.js",
-        "build": "cross-env NODE_ENV=production webpack --config config/webpack.config.js"
+        "build": "cross-env NODE_ENV=production webpack --config config/webpack.config.js",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist"
     },
     "keywords": [],
     "author": "",
@@ -18,6 +21,7 @@
         "clean-webpack-plugin": "^4.0.0",
         "cross-env": "^7.0.3",
         "css-loader": "^6.11.0",
+        "gh-pages": "^6.3.0",
         "html-webpack-plugin": "^5.6.3",
         "sass": "^1.86.0",
         "sass-loader": "^16.0.5",
